@@ -15,6 +15,7 @@ Brett Kosinski   brettk at frodo dot dyn dot gno dot org
 Thierry Vignaud  tvignaud at mandrakesoft dot com
 James Curbo      hannibal at adtrw dot org
 Bjarne Steinsbø  bosteins at broadpark dot no
+Jacek Konieczny  jajcus at bnet dot pl
 
 several important bits of gtk2-perl were heavily inspired by pygtk, gtk-perl,
 and a good read-through of the gtk source code, so credit goes to those guys as
