@@ -47,6 +47,7 @@ guchar *	T_PV
 const guchar *	T_PV
 gfloat		T_FLOAT
 gdouble		T_DOUBLE
+gpointer	T_PTR
 
 GObject*	T_GPERL_GENERIC_WRAPPER
 GObject_ornull*	T_GPERL_GENERIC_WRAPPER
